<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arielg.nowtify.MainActivity">

    <RelativeLayout
        android:id="@+id/layoutParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_bottom_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >


        <LinearLayout
            android:id="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="@dimen/image_icon_dimens"
                android:layout_height="@dimen/image_icon_dimens"
                android:layout_margin="2dp"
                android:background="@drawable/image_border"
                android:contentDescription="@string/content_desc_nowtify_icon"
                android:onClick="onChangeNowtifyIcon"
                android:scaleType="center"
                android:src="@drawable/ic_nowtify_icon00"/>

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_title"
                android:inputType="textPersonName"
                android:maxLength="@integer/max_title_length">

                <requestFocus/>
            </EditText>

        </LinearLayout>

        <EditText
            android:id="@+id/editContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutTop"
            android:ems="10"
            android:hint="@string/hint_content"
            android:inputType="textMultiLine"
            android:maxLength="250"
            android:maxLines="5"/>

        <Button
            android:id="@+id/buttonCreateNowtify"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/editContent"
            android:onClick="onCreateNowtification"
            android:text="@string/app_button"
            android:textAllCaps="false"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/buttonDebug"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/layoutParent"
        android:layout_alignParentStart="true" >
    </FrameLayout>


</RelativeLayout>